[package]
name = "conway-polyhedron-notation-parser"
version = "0.1.1"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
miette = { version = "5.7.0", features = ["fancy", "owo-colors"] }
pest = { version = "2.5.7", features = ["thiserror", "pretty-print"] }
pest_derive = "2.5.7"
polyhedron-ops = { path = "../polyhedron-ops", features = [ "obj" ] }
