[package]
name = "conway-polyhedron-notation-parser"
version = "0.1.2"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
miette = { version = "7.5", features = ["fancy"] }
pest = { version = "2.8", features = ["pretty-print"] }
pest_derive = "2.8"
polyhedron-ops = { path = "../polyhedron-ops", features = [ "obj" ] }
